force-app/main/default/objects/Case/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <formula>IF(  ISPICKVAL( Status , &apos;Closed&apos;) , null ,  Case ( Priority , 
&apos;High&apos;,  CreatedDate +2, 
&apos;Medium&apos;,  CreatedDate +5,
&apos;Low&apos;, CreatedDate +7,
null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>