force-app/main/default/objects/Case/fields/NoOfDaysOpen__c.field-meta.xml
<CustomField>
    <fullName>NoOfDaysOpen__c</fullName>
    <formula>IF( ISPICKVAL( Status , &apos;Closed&apos;), DATEVALUE(  ClosedDate  )  -  DATEVALUE( CreatedDate ) , TODAY() -   DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NoOfDaysOpen</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>