force-app/main/default/objects/Case/validationRules/More_comments.validationRule-meta.xml
<ValidationRule>
    <fullName>More_comments</fullName>
    <active>true</active>
    <description>If the Priority is High and the status is Waiting on someone else and length of the comment field is less than 30-character validation rule must be activated</description>
    <errorConditionFormula>ISPICKVAL( Priority , &apos;High&apos;) &amp;&amp;  

 ISPICKVAL( Status , &apos;Waiting on someone else&apos;)  &amp;&amp; 

 LEN( Description ) &lt; 30</errorConditionFormula>
    <errorDisplayField>Description</errorDisplayField>
    <errorMessage>More comments must be entered for high priority tasks</errorMessage>
</ValidationRule>